k8s1/nginx-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#spec:
#  selector:
#    app: nginx
#  type: NodePort
#  ports:
#    - port: 80
#      targetPort: 80
#      nodePort: 30000

apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
